# pysketcher

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  conftest.py  noxfile.py  pyproject.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-request.md
.github/workflows/: coverage.yml  dependabot.yml  release-drafter.yml  release.yml  test.yml
docs/: conf.py  index.rst
examples/: README.md  beam1.py  beam2.py  flow_over_gaussian.py  hatch_test.py  hello_world.py  pendulum1.py  pendulum2.py  vehicle_dim.py  wheel_on_inclined_plane.py
examples/legacy broken examples/: previously removed examples.txt
pysketcher/: __init__.py  _angle.py  _arc.py  _cubic_bezier_curve.py  _distance_with_text.py  _line.py  _rectangle.py  _simple_support.py  _style.py  _text.py  _velocity_profile.py
pysketcher/annotation/: _line_annotation.py
pysketcher/backend/matplotlib/: _matplotlib_backend.py  _matplotlib_curve.py  _matplotlib_text.py
pysketcher/backend/svg/: __init__.py  _svg_adapter.py  _svg_backend.py  _svg_circle.py  _svg_composition.py  _svg_curve.py  _svg_line.py  _svg_rectangle.py  _svg_style.py  _svg_text.py
pysketcher/dimension/: _angular_dimension.py
tests/: test_angle.py  test_point.py
tests/backend/svg/: _test_svg_backend.py
tests/strategies/: __init__.py  _float.py
tests/utils/: __init__.py  given_inferred.py  is_close.py
